fix added gap in pfanne-wok

--- a/style.css
+++ b/style.css
@@ -178,8 +178,10 @@ li {
         padding-top: 40px;
         padding-bottom: 40px;
     }
+    
     .display {
         display: flex;
+        gap: 16px;
 
         img {
             width: 200px;
